Added edit item window

--- a/Utilities/DataTemplate.xaml
+++ b/Utilities/DataTemplate.xaml
@@ -32,6 +32,10 @@
         <view:AddItem />
     </DataTemplate>
 
+    <DataTemplate DataType="{x:Type vm:EditItemVM}">
+        <view:EditItem />
+    </DataTemplate>
+
     <DataTemplate DataType="{x:Type vm:DeleteEntityVM}">
         <view:DeleteEntity />
     </DataTemplate>
