--- a/Views/EditItem.xaml
+++ b/Views/EditItem.xaml
@@ -1,4 +1,5 @@
 ﻿<Window x:Class="WPFDeskManager.Views.EditItem"
+        x:Name="EditItemWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -170,7 +171,7 @@
                 Content="{Binding EntityButtonContent}" 
                 Style="{StaticResource EntityWindowButton}" 
                 Command="{Binding EntityButtonCommand}"
-                CommandParameter="{Binding ElementName=EditDeskWindow}"
+                CommandParameter="{Binding ElementName=EditItemWindow}"
                 Margin="0,0,0,0"
                 />
 
@@ -180,7 +181,7 @@
                 Content="{Binding CancelButtonContent}" 
                 Style="{StaticResource EntityWindowButton}" 
                 Command="{Binding CloseButtonCommand}"
-                CommandParameter="{Binding ElementName=EditDeskWindow}"
+                CommandParameter="{Binding ElementName=EditItemWindow}"
                 Margin="0,0,0,0"
                 />
         </Grid>
