Added team windows

--- a/Utilities/DataTemplate.xaml
+++ b/Utilities/DataTemplate.xaml
@@ -36,6 +36,10 @@
         <view:Users />
     </DataTemplate>
 
+    <DataTemplate DataType="{x:Type vm:TeamsVM}">
+        <view:Teams />
+    </DataTemplate>
+
     <DataTemplate DataType="{x:Type vm:DeleteEntityVM}">
         <view:DeleteEntity />
     </DataTemplate>
